# aviutl2-bote-plugin

./: .gitignore  CMakeLists.txt  Pawnhub.aux2  README.md  sample.porns.json
include/aviutl2_sdk/: plugin2.h
src/: porns_yagi.cpp
